# angr-entry-to-target

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example.py
src/: angr_extensions.py  entry_method_model.py  execution_technique_generator.py  target_method_analysis.py  target_method_model.py
src/adhoc/: main.py
src/angr-project/: __init__.py  entry_function.py  target_method_analysis.py
src/angrparc/: __init__.py  entry_function.py  entry_to_target_analysis.py  target_function.py  target_method_analysis.py
src/angrparc/scripts/: calling_convention_helper.py
tests/: test_target_method_analysis.py
tests/binaries/: hello-rust
