[tool.poetry]
name = "angrparc"
version = "0.1.0"
description = "angrparc"
authors = ["william.hafner"]
readme = "README.md"
packages = [
    {include = "angrparc", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
angr = "^9.2.92"
claripy = "^9.2.92"
typing = "^3.7.0.0"
argparse = "^1.4.0"

[tool.poetry.scripts]
calling-convention-helper = "angrparc.scripts.calling_convention_helper:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
